# mwc-wallet

./: Cargo.toml  azure-pipelines.yml  build_lib_macos_Android.sh  build_lib_macos_ios.sh  build_lib_macos_nightly_sanitizer.sh  build_static.sh  build_static64.bat  build_static_linux.sh  mypatch.patch
.ci/: release.yml  test.yml  windows-release.yml
api/: Cargo.toml
api/src/: foreign.rs  foreign_rpc.rs  lib.rs  owner.rs  owner_rpc_v2.rs  owner_rpc_v3.rs  types.rs
config/: Cargo.toml
config/src/: comments.rs  config.rs  lib.rs  types.rs
controller/: Cargo.toml
controller/src/: command.rs  controller.rs  display.rs  error.rs  executor.rs  foreign.rs  lib.rs
controller/tests/: accounts.rs  broken_change.rs  build_chain.rs  build_output.rs  check.rs  file.rs  integrity_kernel.rs  invoice.rs  late_lock.rs  no_change.rs  ownership_proofs.rs  payment_proofs.rs  repost.rs  revert.rs  self_send.rs  self_spend.rs  slatepack.rs  transaction.rs  ttl_cutoff.rs  tx_list_filter.rs  updater_thread.rs
controller/tests/common/: mod.rs
doc/: atomic_swaps.md  floonet_faucet.md  hardware_wallet.md  mwc_lib_specification.md  setup.md  slatepack_data_format.md  tls-setup.md  tor_for_exchanges_pools.md
doc/design/: design.md  goals.md  wallet-arch.puml
doc/samples/v3_api_node/: readme.md
doc/samples/v3_api_node/src/: index.js
doc/transaction/: basic-transaction-wf.puml
impls/: Cargo.toml
impls/src/: error.rs  lib.rs
impls/src/adapters/: file.rs  http.rs  libp2p_messaging.rs  mod.rs  mwcmq.rs  types.rs
impls/src/backends/: lmdb.rs  mod.rs
impls/src/client_utils/: client.rs  json_rpc.rs  mod.rs
impls/src/http_parser/: http_request.rs  mod.rs  parse_utils.rs  post.rs
impls/src/lifecycle/: default.rs  mod.rs  root_public_key.rs  seed.rs
impls/src/node_clients/: http.rs  mod.rs  resp_types.rs
impls/src/test_framework/: mod.rs  testclient.rs
impls/src/tor/: bridge.rs  config.rs  mod.rs  process.rs  proxy.rs  status.rs
integration/: Cargo.toml
integration/src/: lib.rs
integration/tests/: api.rs  dandelion.rs  framework.rs  simulnet.rs  stratum.rs
libwallet/: Cargo.toml
libwallet/src/: address.rs  api_impl.rs  error.rs  internal.rs  lib.rs  slate.rs  step_rng.rs  types.rs
libwallet/src/api_impl/: foreign.rs  owner.rs  owner_eth.rs  owner_libp2p.rs  owner_swap.rs  owner_updater.rs  types.rs
libwallet/src/device/: adpu.rs  build.rs  ledger.rs  ledger_selection.rs  mod.rs  proof.rs  types.rs  utils.rs
libwallet/src/internal/: keys.rs  scan.rs  selection.rs  tx.rs  updater.rs
libwallet/src/proof/: base58.rs  crypto.rs  hasher.rs  message.rs  proofaddress.rs  tx_proof.rs
libwallet/src/slate_versions/: mod.rs  ser.rs  v2.rs  v3.rs
libwallet/src/slatepack/: armor.rs  mod.rs  packer.rs  slatepack.rs
libwallet/src/swap/: api.rs  buyer.rs  error.rs  message.rs  mod.rs  owner_eth.rs  owner_swap.rs  seller.rs  ser.rs  swap.rs  trades.rs  types.rs
libwallet/src/swap/bitcoin/: api.rs  client.rs  electrum.rs  rpc.rs  types.rs
libwallet/src/swap/ethereum/: api.rs  client.rs  decimal_convert.rs  ethereum.rs  infura.rs  mod.rs  types.rs
libwallet/src/swap/fsm/: buyer_swap.rs  machine.rs  seller_swap.rs  state.rs
libwallet/src/swap/multisig/: error.rs  mod.rs  types.rs
libwallet/swap_test/: message_1.json  message_2.json  message_3.json  message_4.json  swap_buy_1.json  swap_buy_2.json  swap_buy_3.json  swap_sell_1.json  swap_sell_2.json  swap_sell_3.json  swap_sell_4.json  swap_sell_5.json  swap_sell_6.json
libwallet/tests/: libwallet.rs  slate_versioning.rs
mwc_wallet_lib/: Cargo.toml
mwc_wallet_lib/c_header/: mwc_wallet_interface.h
mwc_wallet_lib/src/: callback_node_client.rs  encode_slatepack.rs  ffi.rs  finalize.rs  generate_headers.rs  lib.rs  mwc_wallet_calls.rs  post.rs  receive.rs  repost.rs  scan.rs  wallet_lock.rs
src/: lib.rs
src/cli/: cli.rs  mod.rs
src/cmd/: mod.rs  wallet.rs  wallet_args.rs
tests/: cmd_line_basic.rs  owner_v2_sanity.rs  owner_v3_init_secure.rs  owner_v3_lifecycle.rs  tor_dev_helper.rs
tests/common/: mod.rs
util/: Cargo.toml
util/src/: lib.rs  ov3.rs  tokio_runtime.rs
wallet_workflow/: Cargo.toml
wallet_workflow/src/: lib.rs  wallet.rs
