[package]
name = "mwc_wallet"
version = "5.3.7"
authors = ["Mwc Developers <info@mwc.mw>"]
description = "Simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mwc-project/mwc-wallet"
keywords = [ "crypto", "mwc", "mimblewimble" ]
readme = "README.md"
exclude = ["**/*.mwc", "**/*.mwc2"]
build = "src/build/build.rs"
edition = "2018"

[[bin]]
name = "mwc-wallet"
path = "src/bin/mwc-wallet.rs"

[workspace]
members = ["api", "config", "controller", "impls", "libwallet", "util"]
exclude = ["integration"]

[dependencies]
clap = { version = "2.33", features = ["yaml"] }
rpassword = "4.0"
thiserror = "1"
prettytable-rs = "0.10"
log = "0.4"
linefeed = "0.6"
semver = "0.10"
rustyline = "6"
lazy_static = "1.4"
ed25519-dalek = "1.0.0-pre.4"
x25519-dalek = "0.6"
# Fixing issue with bitvec
funty = "=1.1.0"
uuid = { version = "0.8", features = ["serde", "v4"] }
shlex = "1.3.0"

mwc_wallet_api = { path = "./api", version = "5.3.7" }
mwc_wallet_impls = { path = "./impls", version = "5.3.7" }
mwc_wallet_libwallet = { path = "./libwallet", version = "5.3.7" }
mwc_wallet_controller = { path = "./controller", version = "5.3.7" }
mwc_wallet_config = { path = "./config", version = "5.3.7" }
mwc_wallet_util = { path = "./util", version = "5.3.7" }

[build-dependencies]
built = { version = "0.4", features = ["git2"]}

[dev-dependencies]
url = "2.1"
serde = "1"
serde_derive = "1"
serde_json = "1"
remove_dir_all = "0.7"
easy-jsonrpc-mwc = { git = "https://github.com/mwcproject/easy-jsonrpc-mwc", version = "0.5.5", branch = "master" }

[patch.crates-io]
mwc_secp256k1zkp = { git = "https://github.com/mwcproject/rust-secp256k1-zkp", tag = "0.7.16" }
