[package]
name = "mwc_wallet"
version = "6.0.1"
authors = ["Mwc Developers <info@mwc.mw>"]
description = "Simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mwc-project/mwc-wallet"
keywords = [ "crypto", "mwc", "mimblewimble" ]
readme = "README.md"
exclude = ["**/*.mwc", "**/*.mwc2"]
build = "src/build/build.rs"
edition = "2018"

[[bin]]
name = "mwc-wallet"
path = "src/bin/mwc-wallet.rs"

[workspace]
members = ["api", "config", "controller", "impls", "libwallet", "mwc_wallet_lib", "util", "wallet_workflow"]
exclude = ["integration"]

[dependencies]
mwc_wallet_api = { path = "./api", version = "6.0.1" }
mwc_wallet_impls = { path = "./impls", version = "6.0.1" }
mwc_wallet_libwallet = { path = "./libwallet", version = "6.0.1" }
mwc_wallet_controller = { path = "./controller", version = "6.0.1" }
mwc_wallet_config = { path = "./config", version = "6.0.1" }
mwc_wallet_util = { path = "./util", version = "6.0.1" }
mwc_wallet_workflow = { path = "./wallet_workflow", version = "6.0.1" }

[build-dependencies]
built = { version = "0.8", features = ["git2"]}

[features]
libp2p = ["mwc_wallet_impls/libp2p", "mwc_wallet_libwallet/libp2p", "mwc_wallet_controller/libp2p"]
grin_proof = ["mwc_wallet_libwallet/grin_proof", "mwc_wallet_api/grin_proof", "mwc_wallet_controller/grin_proof", "mwc_wallet_impls/grin_proof"]
swaps = ["mwc_wallet_impls/swaps", "mwc_wallet_libwallet/swaps", "mwc_wallet_controller/swaps"]
