[package]
name = "mwc_wallet_api"
version = "5.3.4"
authors = ["Mwc Developers <info@mwc.mw>"]
description = "Mwc Wallet API"
license = "Apache-2.0"
repository = "https://github.com/mwcproject/mwc-wallet"
keywords = [ "crypto", "mwc", "mimblewimble" ]
exclude = ["**/*.mwc", "**/*.mwc2"]
edition = "2018"

[dependencies]
log = "0.4"
uuid = { version = "0.8", features = ["serde", "v4"] }
serde = "1"
rand = "0.6"
serde_derive = "1"
serde_json = "1"
easy-jsonrpc-mw = "0.5.4"
chrono = { version = "0.4.11", features = ["serde"] }
ring = "0.16"
base64 = "0.12"
ed25519-dalek = "1.0.0-pre.4"
colored = "1.6"
x25519-dalek = "0.6"

mwc_wallet_libwallet = { path = "../libwallet", version = "5.3.4" }
mwc_wallet_config = { path = "../config", version = "5.3.4" }
mwc_wallet_impls = { path = "../impls", version = "5.3.4" }
mwc_wallet_util = { path = "../util", version = "5.3.4" }

[dev-dependencies]
serde_json = "1"
tempfile = "3.1"
