[package]
name = "mwc_wallet_api"
version = "6.0.1"
authors = ["Mwc Developers <info@mwc.mw>"]
description = "Mwc Wallet API"
license = "Apache-2.0"
repository = "https://github.com/mwcproject/mwc-wallet"
keywords = [ "crypto", "mwc", "mimblewimble" ]
exclude = ["**/*.mwc", "**/*.mwc2"]
edition = "2018"

[dependencies]
mwc_wallet_libwallet = { path = "../libwallet", version = "6.0.1" }
mwc_wallet_config = { path = "../config", version = "6.0.1" }
mwc_wallet_impls = { path = "../impls", version = "6.0.1" }
mwc_wallet_util = { path = "../util", version = "6.0.1" }

[features]
grin_proof = ["mwc_wallet_libwallet/grin_proof"]
swaps = ["mwc_wallet_libwallet/swaps"]
