[package]
name = "mwc_wallet_config"
version = "5.3.4"
authors = ["Mwc Developers <info@mwc.mw>"]
description = "Configuration for mwc wallet , a simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mwcproject/mwc-wallet"
keywords = [ "crypto", "mwc", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
rand = "0.6"
serde = "1"
dirs = "2.0"
toml = "0.5"
serde_derive = "1"
thiserror = "1"

mwc_wallet_util = { path = "../util", version = "5.3.4" }

[dev-dependencies]
pretty_assertions = "0.6"
