[package]
name = "mwc_wallet_config"
version = "6.0.1"
authors = ["Mwc Developers <info@mwc.mw>"]
description = "Configuration for mwc wallet , a simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mwcproject/mwc-wallet"
keywords = [ "crypto", "mwc", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
mwc_wallet_util = { path = "../util", version = "6.0.1" }
