[package]
name = "mwc_wallet_controller"
version = "6.0.1"
authors = ["Mwc Developers <info@mwc.mw>"]
description = "Controllers for mwc wallet instantiation"
license = "Apache-2.0"
repository = "https://github.com/mwcproject/mwc-wallet"
keywords = [ "crypto", "mwc", "mimblewimble" ]
exclude = ["**/*.mwc", "**/*.mwc2"]
#build = "src/build/build.rs"
edition = "2018"

[dependencies]
mwc_wallet_util = { path = "../util", version = "6.0.1" }
mwc_wallet_api = { path = "../api", version = "6.0.1" }
mwc_wallet_impls = { path = "../impls", version = "6.0.1" }
mwc_wallet_libwallet = { path = "../libwallet", version = "6.0.1" }
mwc_wallet_config = { path = "../config", version = "6.0.1" }

[features]
# real dependency: libp2p = ["dep:mwc-libp2p"]
libp2p = []
grin_proof = ["mwc_wallet_libwallet/grin_proof"]
swaps = ["mwc_wallet_libwallet/swaps"]
