[package]
name = "mwc_wallet_impls"
version = "5.3.7"
authors = ["Mwc Developers <info@mwc.mw>"]
description = "Concrete types derived from libwallet traits"
license = "Apache-2.0"
repository = "https://github.com/mwcproject/mwc-wallet"
keywords = [ "crypto", "mwc", "mimblewimble" ]
exclude = ["**/*.mwc", "**/*.mwc2"]
edition = "2018"

[dependencies]
blake2-rfc = "0.2"
thiserror = "1"
futures = "0.3"
rand = "0.6"
serde = "1"
serde_derive = "1"
serde_json = "1"
log = "0.4"
ring = "0.16"
tokio = { version = "0.2", features = ["full"] }
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4.11", features = ["serde"] }
lazy_static = "1.4"
reqwest = { version = "0.10", features = ["rustls-tls", "socks", "blocking"] }

nanoid = "0.1.3"

#Socks/Tor/Bridge/Proxy
byteorder = "1"
ed25519-dalek = "1.0.0-pre.4"
x25519-dalek = "0.6"
data-encoding = "2"
regex = "1.3"
timer = "0.2"
sysinfo = "0.29"
base64 = "0.12.0"
url = "2.1"

mwc-libp2p = { git = "https://github.com/mwcproject/rust-libp2p", version="0.35.3", branch = "master", default-features = false, features = [ "noise", "yamux", "mplex", "dns", "tcp-tokio", "ping", "gossipsub"] }
#libp2p = { path = "../../rust-libp2p", default-features = false, features = [ "noise", "yamux", "mplex", "dns", "tcp-tokio", "ping", "gossipsub"] }

mwc_wallet_util = { path = "../util", version = "5.3.7" }
mwc_wallet_config = { path = "../config", version = "5.3.7" }
mwc_wallet_libwallet = { path = "../libwallet", version = "5.3.7" }

[dev-dependencies]
"remove_dir_all" = "0.7"
