[package]
name = "mwc_wallet_impls"
version = "6.0.1"
authors = ["Mwc Developers <info@mwc.mw>"]
description = "Concrete types derived from libwallet traits"
license = "Apache-2.0"
repository = "https://github.com/mwcproject/mwc-wallet"
keywords = [ "crypto", "mwc", "mimblewimble" ]
exclude = ["**/*.mwc", "**/*.mwc2"]
edition = "2018"

[dependencies]
mwc_wallet_util = { path = "../util", version = "6.0.1" }
mwc_wallet_config = { path = "../config", version = "6.0.1" }
mwc_wallet_libwallet = { path = "../libwallet", version = "6.0.1" }

[features]
# real dependency: libp2p = ["dep:mwc-libp2p"]
libp2p = []
grin_proof = ["mwc_wallet_libwallet/grin_proof"]
swaps = ["mwc_wallet_libwallet/swaps"]