[package]
name = "mwc_integration"
version = "1.1.0"
authors = ["Mwc Developers <info@mwc.mw>"]
description = "Simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mimblewimble/mwc"
keywords = [ "crypto", "mwc", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
futures = "0.1"
http = "0.1"
itertools = "0.7"
rand = "0.5"
serde = "1"
log = "0.4"
serde_derive = "1"
serde_json = "1"
chrono = "0.4.11"
tokio =  "0.1.22"
blake2-rfc = "0.2"
bufstream = "0.1"

#mwc_apiwallet = { path = "../apiwallet", version = "1.1.0" }
#mwc_libwallet = { path = "../libwallet", version = "1.1.0" }
#mwc_refwallet = { path = "../refwallet", version = "1.1.0" }
#mwc_wallet_config = { path = "../config", version = "1.1.0" }

#mwc_core = { git = "https://github.com/mimblewimble/mwc", branch = "milestone/1.1.0" }
#mwc_keychain = { git = "https://github.com/mimblewimble/mwc", branch = "milestone/1.1.0" }
#mwc_chain = { git = "https://github.com/mimblewimble/mwc", branch = "milestone/1.1.0" }
#mwc_util = { git = "https://github.com/mimblewimble/mwc", branch = "milestone/1.1.0" }
#mwc_api = { git = "https://github.com/mimblewimble/mwc", branch = "milestone/1.1.0" }
#mwc_store = { git = "https://github.com/mimblewimble/mwc", branch = "milestone/1.1.0" }
#mwc_p2p = { git = "https://github.com/mimblewimble/mwc", branch = "milestone/1.1.0" }
#mwc_servers = { git = "https://github.com/mimblewimble/mwc", branch = "milestone/1.1.0" }
