[package]
name = "mwc_wallet_libwallet"
version = "5.3.8"
authors = ["Mwc Developers <info@mwc.mw>"]
description = "Simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mwcproject/mwc-wallet"
keywords = [ "crypto", "mwc", "mimblewimble" ]
exclude = ["**/*.mwc", "**/*.mwc2"]
#build = "src/build/build.rs"
edition = "2018"

[dependencies]
blake2-rfc = "0.2"
rand = "0.6"
serde = "1"
serde_derive = "1"
serde_json = "1"
log = "0.4"
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4.11", features = ["serde"] }
lazy_static = "1.4"
strum = "0.18"
strum_macros = "0.18"
thiserror = "1"
ed25519-dalek = "1.0.0-pre.4"
x25519-dalek = "0.6"
byteorder = "1"
data-encoding = "2"
ring = "0.16"
regex = "1.3"
sha2 = "0.9"
sha3 = "0.8"
digest = "0.9"
hmac = "0.11"
ripemd160 = "0.9"
signature = "1.1.0"
hex = "0.3"
base64 = "0.12"
colored ="1.6"
serial_test = "0.4.0"
native-tls = "0.2"
smaz = "0.1"
bitstream-io = "0.9"
bs58 = "0.3"
curve25519-dalek = "2.1"
crypto_box = "0.5"
crc = "1.8"
maplit = "1.0"
num-bigint = "0.2"
crossbeam-utils = "0.7"


tokio = { version = "1", features = ["full"] }
futures-timer = "3.0.2"


bitcoin_hashes = { version = "0.9.1", features = ["serde"] }
secp256k1 = { version = "0.20.1", features = ["rand"]}
#ether-converter = "0.1.3"
bigdecimal = "0.4.2"


#mwc-libp2p = { path = "../../rust-libp2p", default-features = false, features = [ "noise", "yamux", "mplex", "dns", "tcp-tokio", "ping", "gossipsub"] }
#mwc-libp2p = { git = "https://github.com/mwcproject/rust-libp2p", version="0.35.3", branch = "master", default-features = false, features = [ "noise", "yamux", "mplex", "dns", "tcp-tokio", "ping", "gossipsub"] }
#bitcoin = { version = "0.27", path = "../../rust-bitcoin", features = ["bitcoinconsensus"] }
mwc-bitcoin = { git = "https://github.com/mwcproject/rust-bitcoin",  version = "0.27.1", branch = "zkp", features = ["bitcoinconsensus"] }
#bch = { path = "../../rust-bch" }
mwc-bch = { git = "https://github.com/mwcproject/rust-bch", version = "0.2.0", branch = "master" }
#web3 = { version = "0.15.0", default-features = false, features = ["ws-tls-async-std", "signing"] }
mwc-web3 = { git = "https://github.com/mwcproject/rust-web3", version = "0.15.0", branch = "master",  default-features = false, features = ["ws-tls-async-std", "signing"] }
mwc-wagyu-ethereum = { git = "https://github.com/mwcproject/wagyu-ethereum", version = "0.6.3", branch = "master" }
mwc-wagyu-model = { git = "https://github.com/mwcproject/wagyu-model",version = "0.6.3",  branch = "master" }
mwc-zcash_primitives = { git = "https://github.com/mwcproject/librustzcash", version = "0.4.0", branch = "master", features = ["transparent-inputs"] }

#zcash_primitives = { path = "../../librustzcash/zcash_primitives", features = ["transparent-inputs"] }


mwc_wallet_util = { path = "../util", version = "5.3.8" }
mwc_wallet_config = { path = "../config", version = "5.3.8" }

[target.'cfg(any(target_os = "android", target_os = "linux"))'.dependencies]
libc = { version = "0.2.69", default-features = false }

[features]
# real dependency: libp2p = ["dep:mwc-libp2p"]
libp2p = []