[package]
name = "mwc_wallet_libwallet"
version = "6.0.1"
authors = ["Mwc Developers <info@mwc.mw>"]
description = "Simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mwcproject/mwc-wallet"
keywords = [ "crypto", "mwc", "mimblewimble" ]
exclude = ["**/*.mwc", "**/*.mwc2"]
#build = "src/build/build.rs"
edition = "2018"

[dependencies]
mwc_wallet_util = { path = "../util", version = "6.0.1" }
mwc_wallet_config = { path = "../config", version = "6.0.1" }
thiserror.workspace = true

[features]
# real dependency: libp2p = ["dep:mwc-libp2p"]
libp2p = []
grin_proof = []
# real dependency: swaps = mwc-bch - mwc-zcash_primitives
swaps = []
