[package]
name = "mwc_wallet_lib"
version = "6.0.1"
authors = ["Mwc Developers <info@mwc.mw>"]
description = "Simple, private and scalable cryptocurrency implementation based on the MimbleWimble chain format."
license = "Apache-2.0"
repository = "https://github.com/mwcproject/mwc-node"
keywords = [ "crypto", "mwc", "mimblewimble" ]
workspace = ".."
edition = "2021"

[lib]
name = "mwc_wallet_lib"
crate-type = ["rlib", "cdylib", "staticlib"]

[[bin]]
name = "generate-headers"
path = "src/generate_headers.rs"

[dependencies]
# Note, safer-ffi can't be reexported because of macro aspects
safer-ffi.workspace = true

mwc_wallet_api = { path = "../api", version = "6.0.1" }
mwc_wallet_impls = { path = "../impls", version = "6.0.1" }
mwc_wallet_libwallet = { path = "../libwallet", version = "6.0.1" }
mwc_wallet_controller = { path = "../controller", version = "6.0.1" }
mwc_wallet_config = { path = "../config", version = "6.0.1" }
mwc_wallet_util = { path = "../util", version = "6.0.1" }
mwc_wallet_workflow = { path = "../wallet_workflow", version = "6.0.1" }
