[package]
name = "mwc_wallet_util"
version = "5.3.3"
authors = ["Mwc Developers <mimblewimble@lists.launchpad.net>"]
description = "Util, for generic utilities and to re-export mwc crates"
license = "Apache-2.0"
repository = "https://github.com/mwcproject/mwc-wallet"
keywords = [ "crypto", "mwc", "mimblewimble" ]
workspace = ".."
edition = "2018"

[dependencies]
rand = "0.6"
serde = "1"
serde_derive = "1"
ed25519-dalek = "1.0.0-pre.4"
data-encoding = "2"
sha3 = "0.8"
lazy_static = "1.4"
tokio = { version = "0.2", features = ["full"] }
thiserror = "1"

# For Release
mwc_core = { git = "https://github.com/mwcproject/mwc-node", version="5.3.3", tag = "5.3.3" }
mwc_keychain = { git = "https://github.com/mwcproject/mwc-node", version="5.3.3", tag = "5.3.3" }
mwc_chain = { git = "https://github.com/mwcproject/mwc-node", version="5.3.3", tag = "5.3.3" }
mwc_util = { git = "https://github.com/mwcproject/mwc-node", version="5.3.3", tag = "5.3.3" }
mwc_api = { git = "https://github.com/mwcproject/mwc-node", version="5.3.3", tag = "5.3.3" }
mwc_store = { git = "https://github.com/mwcproject/mwc-node", version="5.3.3", tag = "5.3.3" }
mwc_p2p = { git = "https://github.com/mwcproject/mwc-node", version="5.3.3", tag = "5.3.3" }

# For bleeding edge
#mwc_core = { git = "https://github.com/mwcproject/mwc-node", branch = "5.3.100" }
#mwc_keychain = { git = "https://github.com/mwcproject/mwc-node", branch = "5.3.100" }
#mwc_chain = { git = "https://github.com/mwcproject/mwc-node", branch = "5.3.100" }
#mwc_util = { git = "https://github.com/mwcproject/mwc-node", branch = "5.3.100" }
#mwc_api = { git = "https://github.com/mwcproject/mwc-node", branch = "5.3.100" }
#mwc_store = { git = "https://github.com/mwcproject/mwc-node", branch = "5.3.100" }
#mwc_p2p = { git = "https://github.com/mwcproject/mwc-node", branch = "5.3.100" }

# For local testing
#mwc_core = { path = "../../mwc-node/core"}
#mwc_keychain = { path = "../../mwc-node/keychain"}
#mwc_chain = { path = "../../mwc-node/chain"}
#mwc_util = { path = "../../mwc-node/util"}
#mwc_api = { path = "../../mwc-node/api"}
#mwc_store = { path = "../../mwc-node/store"}
#mwc_p2p = { path = "../../mwc-node/p2p"}

[dev-dependencies]
pretty_assertions = "0.6"
